increase TCP buffer so the Pi does not lag behind, small interface fixes

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -12,3 +12,7 @@
 .input-group span, .input-group input {
 	font-size: 80%
 }
+
+div.row p {
+	font-weight: bold;
+}
